oox/source/drawingml/textcharacterproperties.cxx
@@ -195,7 +195,7 @@ void TextCharacterProperties::pushToPropMap( PropertyMap& rPropMap, const XmlFil
     }
     // TODO If bUnderlineFillFollowText uFillTx (CT_TextUnderlineFillFollowText) is set, fill color of the underline should be the same color as the text
 
-    if( maHighlightColor.isUsed() )
+    if (maHighlightColor.isUsed() && maHighlightColor.getTransparency() != 100)
         rPropMap.setProperty( PROP_CharBackColor, maHighlightColor.getColor( rFilter.getGraphicHelper() ));
     else
         rPropMap.setProperty( PROP_CharBackColor, sal_Int32(-1));
